# rsa_chat

./: SERVER.py  client1.pyw  client2.pyw  funcs.py  gen_keys.py  pyproject.toml
client1/: client1.pyw  funcs.py
client2/: client2.pyw
client3/: client3.py
client3_console/: client3.py
client3_console/keys/: gen_keys.py
server/: server.py
