[tool.poetry]
name = "rsa-chat"
version = "0.1.0"
description = ""
authors = ["equdevel <bav@tuta.io>"]
readme = "README.md"
packages = [{include = "rsa_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
rsa = "^4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
